Use environment variables

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PROJECT_ID = cbb27171-c896-42ed-918c-96d3a4e101e6
+REACT_APP_CHAT_ENGINE_KEY = 8a5da3bf-761a-457e-a5ec-24dd9ceb69c5
+REACT_APP_CHAT_ENGINE_PROJECT_ID = cbb27171-c896-42ed-918c-96d3a4e101e6
